--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build && next export",
+    "build": "next build",
     "dev": "next dev",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d out",
     "lint": "next lint",
     "start": "next start"
   },
